--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,23 @@
 $c-gray: #eee;
+$headerHeight: 700px;
+$generalWidth: 1020px;
+$personPhotoSize: 150px;
+$crownWidth: 23px;
+$titleSize: 48px;
+$iconSize: 18px;
+$imgHeight: 260px;
+$footerHeight: 360px;
+$maxWidth: 1020px;
+$smallLogoWidth: 73px;
+
+$borderRadius: 8px;
+
+$backgroundColor: #f2f2f2;
+$generalyHeaderColor: #fff;
+$textColor: #3e3e3e;
+$secondaryColor: #0075ff;
+$hoverColor: #0067df;
+
+$smallBreakPoint: 900px;
+$hoverDuration: 0.3s;
+$transitionDuration: 0.5s;
