--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,30 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "header";
+@import "reset";
+@import "description";
+@import "part";
+@import "gallery";
+@import "crown";
+@import "consultation";
+@import "people";
+@import "person";
+@import "contact";
+@import "navigation";
+@import "footer";
+@import "burger";
+@import "container";
+@import "h3Text";
+@import "button";
+@import "form";
+@import "photo";
+
+html {
+  font-size: 16px;
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  background-color: $backgroundColor;
 }
